--- a/springboot-kafka/final/springboot-kafka/batch-consumer/src/main/resources/application.yml
+++ b/springboot-kafka/final/springboot-kafka/batch-consumer/src/main/resources/application.yml
@@ -16,5 +16,4 @@ spring:
       bootstrap-servers: localhost:9092
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      group-id: words-group9
-      auto-offset-reset: earliest
+      group-id: words-group
